src/components/Layout/index.module.css
@property --volume {
  syntax: "<integer>";
  inherits: false;
  initial-value: 0;
}

.layout {
  margin: 0 auto;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
  overflow: hidden auto;
}

.title {
  padding: 8px;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 12px;
  position: relative;
  font-size: 24px;
  font-weight: bold;
  background-color: #fff;
}

.aim {
  position: relative;
  padding: 16px 32px;
  background-color: #fff;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
  border-radius: 4px;
}

.aim::before {
  content: "";
  display: block;
  background-color: #66bb6a;
  width: 4px;
  height: 100%;
  border-radius: 4px 0 0 4px;
  position: absolute;
  left: 0;
  top: 0;
}

.volume {
  --volume: 50;
  counter-reset: volume var(--volume);
  transition: 0.4s --volume;
  font-weight: bold;
  font-size: 20px;
}

.volume::after {
  margin-left: 4px;
  display: inline-block;
  content: counter(volume) "%";
}

.btns {
  display: flex;
  gap: 8px;
}

.github-wrapper {
  display: block;
  position: absolute;
  right: 24px;
  top: 50%;
  transform: translateY(-50%);
  font-size: 24px;
}

